# serializer version: 1
# name: test_sensor[sensor.192_168_1_1_disk_free_inodes-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_free_inodes',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk free inodes /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_ifree',
    'unique_id': '12:34:56:78:9a:bc_/_ifree',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_inodes-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk free inodes /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_free_inodes',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '15091734',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_inodes_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_free_inodes_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk free inodes /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_ifree',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_ifree',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_inodes_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk free inodes /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_free_inodes_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '183131475',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_inodes_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_free_inodes_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk free inodes /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_ifree',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_ifree',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_inodes_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk free inodes /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_free_inodes_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '362787383',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_free_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk free space /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_free',
    'unique_id': '12:34:56:78:9a:bc_/_free',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk free space /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_free_space',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '162.526798248291',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_space_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_free_space_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk free space /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_free',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_free',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_space_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk free space /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_free_space_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '972.751178741455',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_space_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_free_space_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk free space /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_free',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_free',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_free_space_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk free space /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_free_space_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6912.58672714233',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_inode_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_inode_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk inode usage /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_iused_percent',
    'unique_id': '12:34:56:78:9a:bc_/_iused_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_inode_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk inode usage /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_inode_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_inode_usage_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_inode_usage_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk inode usage /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_iused_percent',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_iused_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_inode_usage_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk inode usage /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_inode_usage_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_inode_usage_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_inode_usage_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk inode usage /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_iused_percent',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_iused_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_inode_usage_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk inode usage /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_inode_usage_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_inodes-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_total_inodes',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk total inodes /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_itotal',
    'unique_id': '12:34:56:78:9a:bc_/_itotal',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_inodes-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk total inodes /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_total_inodes',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '15482880',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_inodes_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_total_inodes_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk total inodes /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_itotal',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_itotal',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_inodes_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk total inodes /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_total_inodes_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '183140352',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_inodes_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_total_inodes_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk total inodes /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_itotal',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_itotal',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_inodes_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk total inodes /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_total_inodes_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '366198784',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_total_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk total space /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_total',
    'unique_id': '12:34:56:78:9a:bc_/_total',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk total space /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_total_space',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '231.369548797607',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_space_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_total_space_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk total space /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_total',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_total',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_space_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk total space /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_total_space_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5543.82404708862',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_space_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_total_space_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk total space /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_total',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_total',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_total_space_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk total space /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_total_space_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '11086.3139038086',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk usage /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_used_percent',
    'unique_id': '12:34:56:78:9a:bc_/_used_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk usage /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_usage_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_usage_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk usage /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_used_percent',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_used_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_usage_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk usage /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_usage_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '82',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_usage_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_usage_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk usage /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_used_percent',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_used_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_usage_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk usage /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_usage_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '35',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_inodes-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_used_inodes',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk used inodes /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_iused',
    'unique_id': '12:34:56:78:9a:bc_/_iused',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_inodes-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk used inodes /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_used_inodes',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '391146',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_inodes_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_used_inodes_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk used inodes /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_iused',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_iused',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_inodes_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk used inodes /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_used_inodes_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '8877',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_inodes_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_used_inodes_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Disk used inodes /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_iused',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_iused',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_inodes_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Disk used inodes /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_used_inodes_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3411401',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_used_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk used space /',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_used',
    'unique_id': '12:34:56:78:9a:bc_/_used',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk used space /',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_used_space',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '57.0203399658203',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_space_media_disk1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_used_space_media_disk1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk used space /media/disk1',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_used',
    'unique_id': '12:34:56:78:9a:bc_/media/disk1_used',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_space_media_disk1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk used space /media/disk1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_used_space_media_disk1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '4291.60855102539',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_space_media_disk2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disk_used_space_media_disk2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disk used space /media/disk2',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fs_used',
    'unique_id': '12:34:56:78:9a:bc_/media/disk2_used',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disk_used_space_media_disk2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disk used space /media/disk2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disk_used_space_media_disk2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3614.9369430542',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disks_free_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disks_free_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disks free space',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'free_space',
    'unique_id': '12:34:56:78:9a:bc_free_space',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disks_free_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disks free space',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disks_free_space',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '8047.86470413208',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disks_total_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disks_total_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disks total space',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_space',
    'unique_id': '12:34:56:78:9a:bc_total_space',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disks_total_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disks total space',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disks_total_space',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '16861.5074996948',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disks_used_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_disks_used_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Disks used space',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'used_space',
    'unique_id': '12:34:56:78:9a:bc_used_space',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_disks_used_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Disks used space',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_disks_used_space',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '7963.56583404541',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_load_15m-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_load_15m',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Load (15m)',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'load_15m',
    'unique_id': '12:34:56:78:9a:bc_load_15m',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_load_15m-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Load (15m)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_load_15m',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_load_1m-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_load_1m',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Load (1m)',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'load_1m',
    'unique_id': '12:34:56:78:9a:bc_load_1m',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_load_1m-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Load (1m)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_load_1m',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.98',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_load_5m-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_load_5m',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Load (5m)',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'load_5m',
    'unique_id': '12:34:56:78:9a:bc_load_5m',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_load_5m-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.1.1 Load (5m)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_load_5m',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1.02',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_memory_free-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_memory_free',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Memory free',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'mem_free',
    'unique_id': '12:34:56:78:9a:bc_mem_free',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_memory_free-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Memory free',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_memory_free',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '24.9505462646484',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_memory_total-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_memory_total',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Memory total',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'mem_total',
    'unique_id': '12:34:56:78:9a:bc_mem_total',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_memory_total-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Memory total',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_memory_total',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '31.2490539550781',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_swap_free-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_swap_free',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Swap free',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'swap_free',
    'unique_id': '12:34:56:78:9a:bc_swap_free',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_swap_free-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Swap free',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_swap_free',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1.86260986328125',
  })
# ---
# name: test_sensor[sensor.192_168_1_1_swap_total-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_1_1_swap_total',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Swap total',
    'platform': 'webmin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'swap_total',
    'unique_id': '12:34:56:78:9a:bc_swap_total',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[sensor.192_168_1_1_swap_total-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '192.168.1.1 Swap total',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_1_1_swap_total',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1.86260986328125',
  })
# ---
